# kogowybrac-app

./: .gitignore  Makefile  README.md
apps/api/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/api/src/: app.ts  config.ts  server.ts
apps/api/src/adapters/: asset_declarations.ts  districts.ts  health.ts
apps/ingestion/: .dockerignore  Dockerfile  pyproject.toml
apps/ingestion/src/extract/: pdf.py
apps/ingestion/src/fetch/: client.py
apps/ingestion/src/provenance/: snapshot.py
apps/ingestion/src/sources/sejm/: __init__.py  asset_declarations.py  pull.py  read.py
apps/ingestion/src/write/: sql.py  storage.py
apps/warehouse/: .user.yml  =3.2.0  README.md  dbt_project.yml  profiles.yml  requirements.txt
apps/warehouse/scripts/: init_schema.py
apps/warehouse/sql/exposures/: exposures_asset_declarations.sql
apps/warehouse/sql/mart/: mart_asset_declarations.sql
apps/warehouse/sql/staging/: init_schema.sh  schema.sql  staging_asset_declarations.sql  staging_extraction_runs.sql  staging_review_decisions.sql
clap/atp/: 00_asset_declarations.md
docs/: c4.md  manifest.md  project_structure.md  tech_stack_mvp.md  vertical_slice_asset_declarations.md
docs/architecture/adrs/: adr-0001-tech-stack-mvp.md
infra/docker/: compose.yml
